# app/Models/Contact.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Contact extends Model
+{
+    use HasFactory;
+    protected $fillable = [
+        'name',
+        'subject',
+        'email',
+        'message',
+        'phone'
+    ];
+}
